--- a/package.json
+++ b/package.json
@@ -1,47 +1,58 @@
 {
-  "name": "frontend",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@coreui/react": "^4.11.1",
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/joy": "^5.0.0-beta.36",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
-    "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.2.5",
+    "@coreui/coreui": "^5.0.0",
+    "@coreui/coreui-pro": "^5.0.0",
+    "@coreui/react": "^5.0.0",
+    "@coreui/react-chartjs": "^3.0.0",
+    "@coreui/react-pro": "^5.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.14.2",
-    "axios": "^1.6.7",
+    "assert": "^2.1.0",
+    "axios": "^1.7.2",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
-    "firebase": "^10.10.0",
-    "flowbite-react": "^0.7.5",
-    "framer-motion": "^11.1.7",
-    "joy-ui": "^0.0.3",
-    "mdb-react-ui-kit": "^8.0.0",
-    "mui-image": "^1.0.7",
+    "chart.js": "^4.4.3",
+    "http": "^0.0.1-security",
+    "https-browserify": "^1.0.0",
+    "install": "^0.13.0",
+    "path-browserify": "^1.0.1",
+    "razorpay": "^2.9.2",
     "react": "^18.2.0",
+    "react-ads": "^2.1.0",
+    "react-adsense": "^0.1.0",
+    "react-advertising": "^4.2.11",
     "react-bootstrap": "^2.10.1",
+    "react-chartjs-2": "^2.11.2",
+    "react-chartkick": "^0.5.3",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-multi-carousel": "^2.8.5",
-    "react-native-toastify": "^0.2.2",
-    "react-otp-input": "^3.1.1",
-    "react-redux": "^9.1.2",
-    "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.22.1",
-    "react-scripts": "^5.0.1",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.4",
+    "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.7",
+    "semantic-ui-react": "^2.1.5",
     "slick-carousel": "^1.8.1",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^6.1.8",
-    "tailwindcss": "^3.4.1",
-    "twilio": "^5.0.3",
+    "url": "^0.11.3",
+    "victory": "^37.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
